--- a/www/templates/discover/ncta.html
+++ b/www/templates/discover/ncta.html
@@ -14,8 +14,8 @@
                 <img src="img/NCTA-Horizontal.png" class="informed-logo">
             </div>
             <ion-list class="list">
-                <ion-item class="item-thumbnail-left item-icon-right" collection-repeat="nctaData in nctaDatas | filter:searchString track by $index" ng-click="openPage(nctaData.link)" type="item-text-wrap">
-                    <img src="{{nctaData.thumbnail}}" style="width:auto;height:auto" />
+                <ion-item class="item-thumbnail-left item-icon-right" collection-repeat="nctaData in nctaDatas | filter:searchString track by $index" ng-click="openPage(nctaData, 'NCTA', $index)" type="item-text-wrap">
+                    <img src="{{nctaData.thumbnail}}" style="width:auto;height:auto;" />
                     <h2>{{nctaData.title}}</h2>
                     <p class="rss-description" ng-bind-html="nctaData.description"></p>
                     <i class="icon ion-chevron-right icon-accessory"></i>
