change forgot password text

--- a/www/templates/welcome/login.html
+++ b/www/templates/welcome/login.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="forgot-password">
                     <button ng-click="forgotpassword()" class="button button-clear">
-                        Forgot password?
+                        Forgot password or username?
                     </button>
                 </div>
                 <div class="logindiv">
